@startuml

class Issue {
 Issue(Issue)
 Issue(String, TreeString, int, int, int, int, Iterable<? extends LineRange>, String, String, TreeString, String, Severity, TreeString, String, String, String, String, Serializable)
 Issue(String, TreeString, int, int, int, int, Iterable<? extends LineRange>, String, String, TreeString, String, Severity, TreeString, String, String, String, String, Serializable, UUID)
 ..
 -long serialVersionUID
 -PathUtil PATH_UTIL
 ~String UNDEFINED
 -String category
 -String type
 -Severity severity
 -int lineStart
 -int lineEnd
 -int columnStart
 -int columnEnd
 -LineRangeList lineRanges
 -UUID id
 -Serializable additionalProperties
 -String reference
 -String origin
 -String moduleName
 -TreeString packageName
 -String pathName
 -TreeString fileName
 -TreeString message
 -String description
 -String fingerprint
 ..
 +String getPropertyValueAsString(Issue, String)
 +Function<Issue, String> getPropertyValueGetter(String)
 +Predicate<Issue> byPackageName(String)
 +Predicate<Issue> byModuleName(String)
 +Predicate<Issue> byFileName(String)
 +Predicate<Issue> byFolder(String)
 +Predicate<Issue> bySeverity(Severity)
 +Predicate<Issue> byCategory(String)
 +Predicate<Issue> byOrigin(String)
 +Predicate<Issue> byType(String)
 #Object readResolve()
 -String normalizeFileName(String)
 -int defaultInteger(int)
 -String defaultString(String)
 -String stripToEmpty(String)
 +UUID getId()
 +String getFileName()
 ~TreeString getFileNameTreeString()
 +String getFolder()
 +String getBaseName()
 +String getAbsolutePath()
 +String getPath()
 ~void setFileName(String, TreeString)
 +boolean hasFileName()
 +String getCategory()
 +String getType()
 +Severity getSeverity()
 +String getMessage()
 ~TreeString getMessageTreeString()
 +String getDescription()
 +int getLineStart()
 +int getLineEnd()
 +Iterable<? extends LineRange> getLineRanges()
 +int getColumnStart()
 +int getColumnEnd()
 +String getPackageName()
 ~TreeString getPackageNameTreeString()
 ~void setPackageName(TreeString)
 +boolean hasPackageName()
 +String getModuleName()
 ~void setModuleName(String)
 +boolean hasModuleName()
 +String getOrigin()
 +void setOrigin(String)
 +String getReference()
 +void setReference(String)
 +String getFingerprint()
 ~void setFingerprint(String)
 +boolean hasFingerprint()
 +Serializable getAdditionalProperties()
 +boolean equals(Object)
 +int hashCode()
 +String toString()
}

class IssueBuilder {
 -String EMPTY
 -String UNDEFINED
 -TreeString UNDEFINED_TREE_STRING
 -TreeString EMPTY_TREE_STRING
 -TreeStringBuilder fileNameBuilder
 -TreeStringBuilder packageNameBuilder
 -TreeStringBuilder messageBuilder
 -int lineStart
 -int lineEnd
 -int columnStart
 -int columnEnd
 -LineRangeList lineRanges
 -String pathName
 -TreeString fileName
 -TreeString packageName
 -String directory
 -String category
 -String type
 -Severity severity
 -TreeString message
 -String description
 -String moduleName
 -String origin
 -String reference
 -String fingerprint
 -Serializable additionalProperties
 -UUID id
 ..
 +IssueBuilder setId(UUID)
 +IssueBuilder setAdditionalProperties(Serializable)
 +IssueBuilder setFingerprint(String)
 +IssueBuilder setFileName(String)
 ~TreeString internFileName(String)
 +IssueBuilder setDirectory(String)
 +IssueBuilder setPathName(String)
 +IssueBuilder setLineStart(int)
 +IssueBuilder setLineStart(String)
 +IssueBuilder setLineEnd(int)
 +IssueBuilder setLineEnd(String)
 +IssueBuilder setColumnStart(int)
 +IssueBuilder setColumnStart(String)
 +IssueBuilder setColumnEnd(int)
 +IssueBuilder setColumnEnd(String)
 +IssueBuilder setCategory(String)
 +IssueBuilder setType(String)
 +IssueBuilder setPackageName(String)
 ~TreeString internPackageName(String)
 +IssueBuilder setModuleName(String)
 +IssueBuilder setOrigin(String)
 +IssueBuilder setReference(String)
 +IssueBuilder setSeverity(Severity)
 +IssueBuilder guessSeverity(String)
 +IssueBuilder setMessage(String)
 +IssueBuilder setDescription(String)
 +IssueBuilder setLineRanges(LineRangeList)
 +IssueBuilder copy(Issue)
 +Issue build()
 -String normalizeFileName(String)
 -String defaultString(String)
 +Optional<Issue> buildOptional()
}

class Report {
 +Report()
 +Report(Report...)
 +Report(Collection<Report>)
 ..
 -long serialVersionUID
 ~String DEFAULT_ID
 -Set<Issue> elements
 -List<String> infoMessages
 -List<String> errorMessages
 -Set<String> fileNames
 -Map<String, String> namesByOrigin
 -int duplicatesSize
 ..
 +Report add(Issue)
 +Report addAll(Issue, Issue...)
 +Report addAll(Collection<? extends Issue>)
 +Report addAll(Report...)
 #Object readResolve()
 +void addFileName(String)
 +Set<String> getFileNames()
 ~Issue remove(UUID)
 +Issue findById(UUID)
 +Set<Issue> findByProperty(Predicate<? super Issue>)
 +Report filter(Predicate<? super Issue>)
 -Stream<Issue> filterElements(Predicate<? super Issue>)
 +Iterator<Issue> iterator()
 +Stream<Issue> stream()
 +int size()
 +boolean isEmpty()
 +boolean isNotEmpty()
 +int getSize()
 +int getDuplicatesSize()
 +int getSizeOf(String)
 +int getSizeOf(Severity)
 +Issue get(int)
 +String toString()
 +Set<String> getModules()
 +boolean hasModules()
 -boolean hasProperty(Set<String>)
 -boolean hasMeaningfulValues(Set<String>)
 +Set<String> getPackages()
 +boolean hasPackages()
 +Set<String> getFolders()
 +boolean hasFolders()
 +Set<String> getAbsolutePaths()
 +Set<String> getFiles()
 +boolean hasFiles()
 +Set<String> getCategories()
 +boolean hasCategories()
 +Set<String> getTypes()
 +boolean hasTypes()
 +Set<String> getTools()
 +boolean hasTools()
 +Set<Severity> getSeverities()
 +boolean hasSeverities()
 +Set<T> getProperties(Function<? super Issue, T>)
 +Map<T, Integer> getPropertyCount(Function<? super Issue, T>)
 +Map<String, Report> groupByProperty(String)
 +Report copy()
 -void copyIssuesAndProperties(Report, Report)
 -void copyProperties(Report, Report)
 +Report copyEmptyInstance()
 +void logInfo(String, Object...)
 +void logError(String, Object...)
 +void logException(Exception, String, Object...)
 +ImmutableList<String> getInfoMessages()
 +ImmutableList<String> getErrorMessages()
 +boolean hasErrors()
 +boolean equals(Object)
 +int hashCode()
 +String getNameOfOrigin(String)
 +void setNameOfOrigin(String, String)
}

class IssueFilterBuilder {
 -Collection<Predicate<Issue>> includeFilters
 -Collection<Predicate<Issue>> excludeFilters

 -void addNewFilter(Collection<String>,Function<Issue,String>,FilterType)
 +Predicate<Issue> build()
 +IssueFilterBuilder setIncludeFileNameFilter(Collection<String>)
 +IssueFilterBuilder setIncludeFileNameFilter(String...)
 +IssueFilterBuilder setExcludeFileNameFilter(Collection<String>)
 +IssueFilterBuilder setExcludeFileNameFilter(String...)
 +IssueFilterBuilder setIncludePackageNameFilter(Collection<String>)
 +IssueFilterBuilder setIncludePackageNameFilter(String...)
 +IssueFilterBuilder setExcludePackageNameFilter(Collection<String>)
 +IssueFilterBuilder setExcludePackageNameFilter(String...)
 +IssueFilterBuilder setIncludeModuleNameFilter(Collection<String>)
 +IssueFilterBuilder setIncludeModuleNameFilter(String...)
 +IssueFilterBuilder setExcludeModuleNameFilter(Collection<String>)
 +IssueFilterBuilder setExcludeModuleNameFilter(String...)
 +IssueFilterBuilder setIncludeCategoryFilter(Collection<String>)
 +IssueFilterBuilder setIncludeCategoryFilter(String...)
 +IssueFilterBuilder setExcludeCategoryFilter(Collection<String>)
 +IssueFilterBuilder setExcludeCategoryFilter(String...)
 +IssueFilterBuilder setIncludeTypeFilter(Collection<String>)
 +IssueFilterBuilder setIncludeTypeFilter(String...)
 +IssueFilterBuilder setExcludeTypeFilter(Collection<String>)
 +IssueFilterBuilder setExcludeTypeFilter(String...)
 +IssueFilterBuilder setIncludeMessageFilter(Collection<String>)
 +IssueFilterBuilder setIncludeMessageFilter(String...)
 +IssueFilterBuilder setExcludeMessageFilter(Collection<String>)
 +IssueFilterBuilder setExcludeMessageFilter(String...)
 -void addMessageFilter(Collection<String>,FilterType)
}

Issue <.. IssueBuilder : instantiates
Report <.. IssueFilterBuilder : builds filters for

@enduml